fixed overflow

--- a/circles.css
+++ b/circles.css
@@ -6,5 +6,6 @@ canvas {
 
 
 body, html {
-	height: 100%
+	height: 100%;
+	background-color: black;
 }
